--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>RSS reader</title>
-    <script defer="defer" src="main.js"></script>
-    <link href="main.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <!-- <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -23,7 +21,7 @@
                         data-bs-dismiss="modal">Закрыть</button></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <main class="flex-grow-1">
         <section class="container-fluid bg-dark p-5">
             <div class="row">
